# amanita

./: Cargo.toml  LICENSE.md  README.md  ROADMAP.md
src/: actions.rs  buffer.rs  commands.rs  completion.rs  crossterm_example.rs  editor.rs  input.rs  lib.rs  main.rs  modes.rs  movement.rs  ui.rs
src/input/: insert.rs  mod.rs  normal.rs  normal_delete.rs  normal_yank.rs  visual.rs
