[package]
name = "amanita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
crossterm = { version = "0.23.2", features = ["event-stream"] }
futures = "0.3.21"
futures-timer = "3.0.2"
tokio = { version = "1.18.2", features = ["rt-multi-thread", "macros", "fs", "time", "io-std", "io-util"] }
tracing = "0.1.35"
tracing-appender = "0.2.2"
tracing-subscriber = "0.3.11"
tui = "0.18.0"
